--- a/calendar-2.html
+++ b/calendar-2.html
@@ -21,16 +21,16 @@
             <div class="top_ham_menu_nav_sub_wrapper">
                 <ul class="top_ham_menu_nav_sub top_ham_menu_nav_sub_hide">
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="about" href="/about.html">ABout</a> 
+                        <a id="about" href="./about.html">ABout</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="Calendar" href="/Calendar.html">Calendar</a> 
+                        <a id="Calendar" href="./Calendar.html">Calendar</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="media" href="/media.html">Media</a> 
+                        <a id="media" href="./media.html">Media</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="news" href="/news.html">News</a> 
+                        <a id="news" href="./news.html">News</a> 
                     </li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
             </div>
         </nav>
         <div class="top_header_logo_wrapper"><!-- LOGO -->
-            <a href="/index.html" class="top_header_logo_link">
+            <a href="./index.html" class="top_header_logo_link">
                 <h1 class="top_header_logo">
                     <img src="./img/SVG/icon-logo.svg" alt="LOGO">
                 </h1>
@@ -58,16 +58,16 @@
         <nav id="main-menu" class="top_header_menu_wrapper" ><!-- 主要menu -->
             <ul class="top_header_menu_list_Wrapper">
                 <li class="top_header_menu_list">
-                    <a href="/about.html" class="active-trail_1">About</a>
+                    <a href="./about.html" class="active-trail_1">About</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/calendar.html" class="active-trail_2 active">Calendar</a><!-- actvie 亮點 -->
+                    <a href="./calendar.html" class="active-trail_2 active">Calendar</a><!-- actvie 亮點 -->
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/media.html" class="active-trail_3">Media</a>
+                    <a href="./media.html" class="active-trail_3">Media</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/news.html" class="active-trail_4">News</a>
+                    <a href="./news.html" class="active-trail_4">News</a>
                 </li>
             </ul>
         </nav>
@@ -162,7 +162,7 @@
                     </div>
                     <div class="calendar-1_1_right_bottom"><!-- 底部hover按鈕 -->
                         <div class="calendar-1_1_right_bottom_btn_wrapper"><!-- 前一頁按鈕 -->
-                            <a href="/calendar-1.html" class="calendar-1_1_right_bottom_btn_link">
+                            <a href="./calendar-1.html" class="calendar-1_1_right_bottom_btn_link">
                                 <div class="btn_arrow_contain_icon_wrapper arrow_left">
                                     <svg class="btn_arrow_contain_icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M19.1924 9.07107L12.1214 2L11.0295 4.18376C10.837 4.56875 10.9124 5.03372 11.2168 5.33808L14.9498 9.07107C16.1214 10.2426 18.0209 10.2426 19.1924 9.07107ZM12.1838 20.7696L10 19.6777L17.7782 11.8996C18.9497 10.728 20.8492 10.728 22.0208 11.8996L13.3381 20.5823C13.0337 20.8867 12.5687 20.9621 12.1838 20.7696Z" fill="#69B42E"></path>
@@ -173,7 +173,7 @@
                             </a>
                         </div>
                         <div class="calendar-1_1_right_bottom_btn_wrapper"><!-- 後一頁按鈕 -->
-                            <a href="/calendar-2.html" class="calendar-1_1_right_bottom_btn_link arrow_right">
+                            <a href="./calendar-2.html" class="calendar-1_1_right_bottom_btn_link arrow_right">
                                 <p class="calendar-1_1_right_bottom_btn_txt">next race</p> 
                                 <div class="btn_arrow_contain_icon_wrapper arrow_right">
                                     <svg class="btn_arrow_contain_icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -213,7 +213,7 @@
                 </div>
                 <ul class="calendar-1_3_container_list_wrapper"><!-- 組 容器 -->
                     <li class="calendar-1_3_container_list ing"><!-- 下一個比賽區塊 ing動畫 -->
-                        <a href="/calendar-2" class="calendar-1_3_container_list_link">
+                        <a href="./calendar-2" class="calendar-1_3_container_list_link">
                             <div class="calendar-1_3_container_list_ing_title">
                                 Next race
                             </div>
@@ -518,7 +518,7 @@
                     <img src="./img/SVG/v-shape.svg" alt="v-shape.svg">
                 </figure>
                 <div class="home_footer_logo_wrapper">
-                    <a href="/index.html">
+                    <a href="./index.html">
                         <figure class="home_footer_logo_img_wrapper">
                                 <img class="home_footer_logo" src="./img/SVG/icon-footer_logo.svg" alt="icon-footer_logo.svg">
                         </figure>
@@ -529,22 +529,22 @@
                         <h2 class="home_footer_contain_title">menu</h2>
                         <ul class="home_footer_contain_list_wrapper">
                             <li class="home_footer_contain_list">
-                                <a href="/about.html">
+                                <a href="./about.html">
                                     About
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/calendar.html">
+                                <a href="./calendar.html">
                                     Calendar
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/media.html">
+                                <a href="./media.html">
                                     Media
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/news.html">
+                                <a href="./news.html">
                                     News
                                 </a>
                             </li>
