--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
             <div class="top_ham_menu_nav_sub_wrapper">
                 <ul class="top_ham_menu_nav_sub top_ham_menu_nav_sub_hide">
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="about" href="/about.html">ABout</a> 
+                        <a id="about" href="./about.html">ABout</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="Calendar" href="/Calendar.html">Calendar</a> 
+                        <a id="Calendar" href="./Calendar.html">Calendar</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="media" href="/media.html">Media</a> 
+                        <a id="media" href="./media.html">Media</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="news" href="/news.html">News</a> 
+                        <a id="news" href="./news.html">News</a> 
                     </li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
             </div>
         </nav>
         <div class="top_header_logo_wrapper"><!-- LOGO -->
-            <a href="/index.html" class="top_header_logo_link">
+            <a href="./index.html" class="top_header_logo_link">
                 <h1 class="top_header_logo">
                     <img src="./img/SVG/icon-logo.svg" alt="LOGO">
                 </h1>
@@ -61,16 +61,16 @@
         <nav id="main-menu" class="top_header_menu_wrapper" ><!-- 主要menu -->
             <ul class="top_header_menu_list_Wrapper">
                 <li class="top_header_menu_list">
-                    <a href="/about.html" class="active-trail_1">About</a>
+                    <a href="./about.html" class="active-trail_1">About</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/calendar.html" class="active-trail_2">Calendar</a>
+                    <a href="./calendar.html" class="active-trail_2">Calendar</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/media.html" class="active-trail_3">Media</a>
+                    <a href="./media.html" class="active-trail_3">Media</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/news.html" class="active-trail_4">News</a>
+                    <a href="./news.html" class="active-trail_4">News</a>
                 </li>
             </ul>
         </nav>
@@ -311,7 +311,7 @@
                             </a>
                         </div>
                         <div class="swiper-slide ing"><!-- 下一場 區塊  ING 上下動畫 -->
-                            <a href="/calendar-1.html" class="swiper_contain_link"><!-- 連結 -->
+                            <a href="./calendar-1.html" class="swiper_contain_link"><!-- 連結 -->
                                 <div class="swiper_contain_ing_title"><!-- 最上方小字 -->
                                     Next race
                                 </div>
@@ -595,7 +595,7 @@
                     <h1 class="top_3_contain_title">Frederik Vesti</h1><!--  -->
                     <p class="top_3_contain_txt">Frederik Vesti, European champion in FIA F3 Regional, participates in 2022 in FIA F2 in the attempt to reach the top with his French team, ART Grand Prix.</p>
                     <div class="btn_arrow_contain_wrapper "><!-- 按鈕 -->
-                        <a href="/about.html" class="btn_arrow_contain_link" >
+                        <a href="./about.html" class="btn_arrow_contain_link" >
                             <div class="btn_arrow_contain btn_hover"><!-- hover版 -->
                                 <span class="btn_arrow_contain_txt">About Frederik Vesti</span>
                                 <div class="btn_arrow_contain_icon_wrapper">
@@ -651,7 +651,7 @@
                 </li>
             </ul>
             <div class="btn_arrow_contain_wrapper "><!-- 按鈕 -->
-                <a href="/media.html" class="btn_arrow_contain_link" >
+                <a href="./media.html" class="btn_arrow_contain_link" >
                     <div class="btn_arrow_contain btn_hover"><!-- hover版 -->
                         <span class="btn_arrow_contain_txt">Go to media gallery</span>
                         <div class="btn_arrow_contain_icon_wrapper">
@@ -773,7 +773,7 @@
                             <div class="icon-play_wrapper"><!-- 綠色 icon-paly -->
                                 <ion-icon name="play" class="icon-play"></ion-icon>
                             </div>
-                            <a class="top_6_grid_link" href="/media-1.html"><!-- 連結 -->
+                            <a class="top_6_grid_link" href="./media-1.html"><!-- 連結 -->
                                 <figure class="top_6_grid_img_wrapper"><!-- 圖片 -->
                                     <img class="top_6_grid_img" src="./img/home/home_grid_img06.jpg" alt="home_grid_img06.jpg">
                                 </figure>
@@ -792,7 +792,7 @@
                             <div class="icon-play_wrapper"><!-- 綠色 icon-paly -->
                                 <ion-icon name="play" class="icon-play"></ion-icon>
                             </div>
-                            <a class="top_6_grid_link" href="/media.html"><!-- 連結 -->
+                            <a class="top_6_grid_link" href="./media.html"><!-- 連結 -->
                                 <figure class="top_6_grid_img_wrapper"><!-- 圖片 -->
                                     <img class="top_6_grid_img" src="./img/home/home_grid_img07.jpg" alt="home_grid_img07.jpg">
                                 </figure>
@@ -811,7 +811,7 @@
                             <div class="icon-play_wrapper">
                                 <ion-icon name="play" class="icon-play"></ion-icon>
                             </div>
-                            <a class="top_6_grid_link" href="/media.html">
+                            <a class="top_6_grid_link" href="./media.html">
                                 <figure class="top_6_grid_img_wrapper">
                                     <img class="top_6_grid_img" src="./img/home/home_grid_img08.jpg" alt="home_grid_img08.jpg">
                                 </figure>
@@ -830,7 +830,7 @@
                 </div>
                 <div class="top_6_btn_wrapper"><!-- 底部連結按鈕 -->
                     <div class="btn_arrow_contain_wrapper ">
-                        <a href="/media.html" class="btn_arrow_contain_link" >
+                        <a href="./media.html" class="btn_arrow_contain_link" >
                             <div class="btn_arrow_contain btn_hover"><!-- hover版 -->
                                 <span class="btn_arrow_contain_txt">Go to media gallery</span>
                                 <div class="btn_arrow_contain_icon_wrapper">
@@ -861,7 +861,7 @@
                     <h2 class="top_7_title">news</h2>
                     <p class="top_7_title_sub">Current info on Frederik and press releases.</p>
                     <div class="top_7_link mobile_hide"><!-- 右邊連結按鈕 -->
-                        <a href="/news.html">
+                        <a href="./news.html">
                             <p class="top_7_link_txt">
                                 view all news 
                             </p>
@@ -876,7 +876,7 @@
                 </div>
                 <div class="top_7_contain_wrapper">
                     <div class="top_7_contain"><!-- 第一內容 -->
-                        <a href="/news-1.html">
+                        <a href="./news-1.html">
                             <figure class="top_7_contain_img_wrapper"><!-- 圖片 -->
                                 <img src="./img/home/home_img02.jpg" alt="home_img02.jpg">
                             </figure>
@@ -886,7 +886,7 @@
                             <h2 class="top_7_contain_article_title">Strong weekend by Vesti</h2><!-- 標題 -->
                             <p class="top_7_contain_article_sub">"The second solid weekend in a row"! This was Danish journalist Jonas Hüttel's...</p>
                             <div class="top_7_link"><!-- 連結 -->
-                                <a href="/news-1.html">
+                                <a href="./news-1.html">
                                     <p class="top_7_link_txt">
                                         Read more 
                                     </p>
@@ -901,7 +901,7 @@
                         </div>
                     </div>
                     <div class="top_7_contain"><!-- 第二內容 -->
-                        <a href="/news.html">
+                        <a href="./news.html">
                             <figure class="top_7_contain_img_wrapper">
                                 <img src="./img/home/home_img03.jpg" alt="home_img03.jpg">
                             </figure>
@@ -926,7 +926,7 @@
                         </div>
                     </div>
                     <div class="top_7_contain"><!-- 第三內容 -->
-                        <a href="/news.html">
+                        <a href="./news.html">
                             <figure class="top_7_contain_img_wrapper">
                                 <img src="./img/home/home_img04.jpg" alt="home_img02.jpg">
                             </figure>
@@ -1010,7 +1010,7 @@
                     <img src="./img/SVG/v-shape.svg" alt="v-shape.svg">
                 </figure>
                 <div class="home_footer_logo_wrapper"><!-- 左側logo圖案 -->
-                    <a href="/index.html">
+                    <a href="./index.html">
                         <figure class="home_footer_logo_img_wrapper">
                                 <img class="home_footer_logo" src="./img/SVG/icon-footer_logo.svg" alt="icon-footer_logo.svg">
                         </figure>
@@ -1021,22 +1021,22 @@
                         <h2 class="home_footer_contain_title">menu</h2><!-- 標題 -->
                         <ul class="home_footer_contain_list_wrapper"><!-- menu 連結 -->
                             <li class="home_footer_contain_list"><!-- 第一行 -->
-                                <a href="/about.html">
+                                <a href="./about.html">
                                     About
                                 </a>
                             </li>
                             <li class="home_footer_contain_list"><!-- 第二行 -->
-                                <a href="/calendar.html">
+                                <a href="./calendar.html">
                                     Calendar
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/media.html">
+                                <a href="./media.html">
                                     Media
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/news.html">
+                                <a href="./news.html">
                                     News
                                 </a>
                             </li>
@@ -1046,62 +1046,62 @@
                         <h2 class="home_footer_contain_title">Partners</h2><!-- 標題 -->
                         <ul class="home_footer_contain_list_wrapper">
                             <li class="home_footer_contain_list"><!-- 第一行 -->
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     Hybel
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     Give Steel
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     FK Tradindustri
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     Office Together
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     LV Sikring
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     Superego
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     Riis Photography
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     BSM Reklame
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     Bell Helmets
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     DASU
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     Team Danmark
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/index.html">
+                                <a href="./index.html">
                                     Racing for Denmark
                                 </a>
                             </li>
