--- a/media-1.html
+++ b/media-1.html
@@ -21,16 +21,16 @@
             <div class="top_ham_menu_nav_sub_wrapper">
                 <ul class="top_ham_menu_nav_sub top_ham_menu_nav_sub_hide">
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="about" href="/about.html">ABout</a> 
+                        <a id="about" href="./about.html">ABout</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="Calendar" href="/Calendar.html">Calendar</a> 
+                        <a id="Calendar" href="./Calendar.html">Calendar</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="media" href="/media.html">Media</a> 
+                        <a id="media" href="./media.html">Media</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="news" href="/news.html">News</a> 
+                        <a id="news" href="./news.html">News</a> 
                     </li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
             </div>
         </nav>
         <div class="top_header_logo_wrapper"><!-- LOGO -->
-            <a href="/index.html" class="top_header_logo_link">
+            <a href="./index.html" class="top_header_logo_link">
                 <h1 class="top_header_logo">
                     <img src="./img/SVG/icon-logo.svg" alt="LOGO">
                 </h1>
@@ -58,16 +58,16 @@
         <nav id="main-menu" class="top_header_menu_wrapper" ><!-- 主要menu -->
             <ul class="top_header_menu_list_Wrapper">
                 <li class="top_header_menu_list">
-                    <a href="/about.html" class="active-trail_1">About</a>
+                    <a href="./about.html" class="active-trail_1">About</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/calendar.html" class="active-trail_2 ">Calendar</a>
+                    <a href="./calendar.html" class="active-trail_2 ">Calendar</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/media.html" class="active-trail_3 active">Media</a><!-- actvie 亮點 -->
+                    <a href="./media.html" class="active-trail_3 active">Media</a><!-- actvie 亮點 -->
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/news.html" class="active-trail_4">News</a>
+                    <a href="./news.html" class="active-trail_4">News</a>
                 </li>
             </ul>
         </nav>
@@ -185,7 +185,7 @@
                     <img src="./img/SVG/v-shape.svg" alt="v-shape.svg">
                 </figure>
                 <div class="home_footer_logo_wrapper">
-                    <a href="/index.html">
+                    <a href="./index.html">
                         <figure class="home_footer_logo_img_wrapper">
                                 <img class="home_footer_logo" src="./img/SVG/icon-footer_logo.svg" alt="icon-footer_logo.svg">
                         </figure>
@@ -196,22 +196,22 @@
                         <h2 class="home_footer_contain_title">menu</h2>
                         <ul class="home_footer_contain_list_wrapper">
                             <li class="home_footer_contain_list">
-                                <a href="/about.html">
+                                <a href="./about.html">
                                     About
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/calendar.html">
+                                <a href="./calendar.html">
                                     Calendar
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/media.html">
+                                <a href="./media.html">
                                     Media
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/news.html">
+                                <a href="./news.html">
                                     News
                                 </a>
                             </li>
