--- a/media.html
+++ b/media.html
@@ -21,16 +21,16 @@
             <div class="top_ham_menu_nav_sub_wrapper">
                 <ul class="top_ham_menu_nav_sub top_ham_menu_nav_sub_hide">
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="about" href="/about.html">ABout</a> 
+                        <a id="about" href="./about.html">ABout</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="Calendar" href="/Calendar.html">Calendar</a> 
+                        <a id="Calendar" href="./Calendar.html">Calendar</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="media" href="/media.html">Media</a> 
+                        <a id="media" href="./media.html">Media</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="news" href="/news.html">News</a> 
+                        <a id="news" href="./news.html">News</a> 
                     </li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
             </div>
         </nav>
         <div class="top_header_logo_wrapper"><!-- LOGO -->
-            <a href="/index.html" class="top_header_logo_link">
+            <a href="./index.html" class="top_header_logo_link">
                 <h1 class="top_header_logo">
                     <img src="./img/SVG/icon-logo.svg" alt="LOGO">
                 </h1>
@@ -58,16 +58,16 @@
         <nav id="main-menu" class="top_header_menu_wrapper" ><!-- 主要menu -->
             <ul class="top_header_menu_list_Wrapper">
                 <li class="top_header_menu_list">
-                    <a href="/about.html" class="active-trail_1">About</a>
+                    <a href="./about.html" class="active-trail_1">About</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/calendar.html" class="active-trail_2 ">Calendar</a>
+                    <a href="./calendar.html" class="active-trail_2 ">Calendar</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/media.html" class="active-trail_3 active">Media</a><!-- actvie 亮點 -->
+                    <a href="./media.html" class="active-trail_3 active">Media</a><!-- actvie 亮點 -->
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/news.html" class="active-trail_4">News</a>
+                    <a href="./news.html" class="active-trail_4">News</a>
                 </li>
             </ul>
         </nav>
@@ -443,7 +443,7 @@
                             <div class="icon-play_wrapper"><!-- icon-play -->
                                 <ion-icon name="play" class="icon-play"></ion-icon>
                             </div>
-                            <a class="media_3_grid_link" href="/media-1.html"><!-- 連結 -->
+                            <a class="media_3_grid_link" href="./media-1.html"><!-- 連結 -->
                                 <figure class="media_3_grid_img_wrapper"><!-- 圖片 -->
                                     <img class="media_3_grid_img" src="./img/media/video/media_video_img01.jpg" alt="media_video_img01.jpg">
                                 </figure>
@@ -458,7 +458,7 @@
                             <div class="icon-play_wrapper">
                                 <ion-icon name="play" class="icon-play"></ion-icon>
                             </div>
-                            <a class="media_3_grid_link" href="/media.html">
+                            <a class="media_3_grid_link" href="./media.html">
                                 <figure class="media_3_grid_img_wrapper">
                                     <img class="media_3_grid_img" src="./img/media/video/media_video_img02.jpg" alt="media_video_img02.jpg">
                                 </figure>
@@ -473,7 +473,7 @@
                             <div class="icon-play_wrapper">
                                 <ion-icon name="play" class="icon-play"></ion-icon>
                             </div>
-                            <a class="media_3_grid_link" href="/media.html">
+                            <a class="media_3_grid_link" href="./media.html">
                                 <figure class="media_3_grid_img_wrapper">
                                     <img class="media_3_grid_img" src="./img/media/video/media_video_img03.jpg" alt="media_video_img03.jpg">
                                 </figure>
@@ -493,7 +493,7 @@
                                 <div class="icon-play_wrapper"><!-- icon-play -->
                                     <ion-icon name="play" class="icon-play"></ion-icon>
                                 </div>
-                                <a class="media_3_grid_link" href="/media.html"><!-- 連結 -->
+                                <a class="media_3_grid_link" href="./media.html"><!-- 連結 -->
                                     <figure class="media_3_grid_img_wrapper"><!-- 圖 -->
                                         <img class="media_3_grid_img" src="./img/media/video/media_video_img04.jpg" alt="media_video_img04.jpg">
                                     </figure>
@@ -508,7 +508,7 @@
                                 <div class="icon-play_wrapper">
                                     <ion-icon name="play" class="icon-play"></ion-icon>
                                 </div>
-                                <a class="media_3_grid_link" href="/media.html">
+                                <a class="media_3_grid_link" href="./media.html">
                                     <figure class="media_3_grid_img_wrapper">
                                         <img class="media_3_grid_img" src="./img/media/video/media_video_img05.jpg" alt="media_video_img05.jpg">
                                     </figure>
@@ -523,7 +523,7 @@
                                 <div class="icon-play_wrapper">
                                     <ion-icon name="play" class="icon-play"></ion-icon>
                                 </div>
-                                <a class="media_3_grid_link" href="/media.html">
+                                <a class="media_3_grid_link" href="./media.html">
                                     <figure class="media_3_grid_img_wrapper">
                                         <img class="media_3_grid_img" src="./img/media/video/media_video_img03.jpg" alt="media_video_img03.jpg">
                                     </figure>
@@ -542,7 +542,7 @@
                                 <div class="icon-play_wrapper">
                                     <ion-icon name="play" class="icon-play"></ion-icon>
                                 </div>
-                                <a class="media_3_grid_link" href="/media-1.html">
+                                <a class="media_3_grid_link" href="./media-1.html">
                                     <figure class="media_3_grid_img_wrapper">
                                         <img class="media_3_grid_img" src="./img/media/video/media_video_img01.jpg" alt="media_video_img01.jpg">
                                     </figure>
@@ -557,7 +557,7 @@
                                 <div class="icon-play_wrapper">
                                     <ion-icon name="play" class="icon-play"></ion-icon>
                                 </div>
-                                <a class="media_3_grid_link" href="/media.html">
+                                <a class="media_3_grid_link" href="./media.html">
                                     <figure class="media_3_grid_img_wrapper">
                                         <img class="media_3_grid_img" src="./img/media/video/media_video_img02.jpg" alt="media_video_img02.jpg">
                                     </figure>
@@ -572,7 +572,7 @@
                                 <div class="icon-play_wrapper">
                                     <ion-icon name="play" class="icon-play"></ion-icon>
                                 </div>
-                                <a class="media_3_grid_link" href="/media.html">
+                                <a class="media_3_grid_link" href="./media.html">
                                     <figure class="media_3_grid_img_wrapper">
                                         <img class="media_3_grid_img" src="./img/media/video/media_video_img03.jpg" alt="media_video_img03.jpg">
                                     </figure>
@@ -683,7 +683,7 @@
                     <img src="./img/SVG/v-shape.svg" alt="v-shape.svg">
                 </figure>
                 <div class="home_footer_logo_wrapper">
-                    <a href="/index.html">
+                    <a href="./index.html">
                         <figure class="home_footer_logo_img_wrapper">
                                 <img class="home_footer_logo" src="./img/SVG/icon-footer_logo.svg" alt="icon-footer_logo.svg">
                         </figure>
@@ -694,22 +694,22 @@
                         <h2 class="home_footer_contain_title">menu</h2>
                         <ul class="home_footer_contain_list_wrapper">
                             <li class="home_footer_contain_list">
-                                <a href="/about.html">
+                                <a href="./about.html">
                                     About
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/calendar.html">
+                                <a href="./calendar.html">
                                     Calendar
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/media.html">
+                                <a href="./media.html">
                                     Media
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/news.html">
+                                <a href="./news.html">
                                     News
                                 </a>
                             </li>
