--- a/news.html
+++ b/news.html
@@ -21,16 +21,16 @@
             <div class="top_ham_menu_nav_sub_wrapper">
                 <ul class="top_ham_menu_nav_sub top_ham_menu_nav_sub_hide">
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="about" href="/about.html">ABout</a> 
+                        <a id="about" href="./about.html">ABout</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="Calendar" href="/Calendar.html">Calendar</a> 
+                        <a id="Calendar" href="./Calendar.html">Calendar</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="media" href="/media.html">Media</a> 
+                        <a id="media" href="./media.html">Media</a> 
                     </li>
                     <li class="top_ham_menu_nav_sub_list">
-                        <a id="news" href="/news.html">News</a> 
+                        <a id="news" href="./news.html">News</a> 
                     </li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
             </div>
         </nav>
         <div class="top_header_logo_wrapper"><!-- LOGO -->
-            <a href="/index.html" class="top_header_logo_link">
+            <a href="./index.html" class="top_header_logo_link">
                 <h1 class="top_header_logo">
                     <img src="./img/SVG/icon-logo.svg" alt="LOGO">
                 </h1>
@@ -58,16 +58,16 @@
         <nav id="main-menu" class="top_header_menu_wrapper" ><!-- 主要menu -->
             <ul class="top_header_menu_list_Wrapper">
                 <li class="top_header_menu_list">
-                    <a href="/about.html" class="active-trail_1">About</a>
+                    <a href="./about.html" class="active-trail_1">About</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/calendar.html" class="active-trail_2 ">Calendar</a>
+                    <a href="./calendar.html" class="active-trail_2 ">Calendar</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/media.html" class="active-trail_3 ">Media</a>
+                    <a href="./media.html" class="active-trail_3 ">Media</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/news.html" class="active-trail_4 active">News</a><!-- actvie 亮點 -->
+                    <a href="./news.html" class="active-trail_4 active">News</a><!-- actvie 亮點 -->
                 </li>
             </ul>
         </nav>
@@ -99,7 +99,7 @@
                 </div>
                 <ul class="news_1_contain_wrapper"><!-- 組容器 -->
                     <li class="news_1_contain"><!-- 第一組 -->
-                        <a href="/news-1.html"><!-- 連結 -->
+                        <a href="./news-1.html"><!-- 連結 -->
                             <figure class="news_1_contain_img_wrapper"><!-- 圖片 -->
                                 <img src="./img/news/news_img01.jpg" alt="news_img01.jpg">
                             </figure>
@@ -109,7 +109,7 @@
                             <h2 class="news_1_contain_article_title">Strong weekend by Vesti</h2><!-- 標題 -->
                             <p class="news_1_contain_article_sub">"The second solid weekend in a row"! This was Danish journalist Jonas Hüttel's...</p>
                             <div class="news_1_link">
-                                <a href="/news-1.html">
+                                <a href="./news-1.html">
                                     <p class="news_1_link_txt">
                                         Read more 
                                     </p>
@@ -124,7 +124,7 @@
                         </div>
                     </li>
                     <li class="news_1_contain"><!-- 第二組 -->
-                        <a href="/news-1.html">
+                        <a href="./news-1.html">
                             <figure class="news_1_contain_img_wrapper">
                                 <img src="./img/news/news_img02.jpg" alt="news_img02.jpg">
                             </figure>
@@ -149,7 +149,7 @@
                         </div>
                     </li>
                     <li class="news_1_contain"><!-- 第三組 -->
-                        <a href="/news-1.html">
+                        <a href="./news-1.html">
                             <figure class="news_1_contain_img_wrapper">
                                 <img src="./img/news/news_img03.jpg" alt="news_img03.jpg">
                             </figure>
@@ -174,7 +174,7 @@
                         </div>
                     </li>
                     <li class="news_1_contain"><!-- 第四組 -->
-                        <a href="/news-1.html">
+                        <a href="./news-1.html">
                             <figure class="news_1_contain_img_wrapper">
                                 <img src="./img/news/news_img04.jpg" alt="news_img04.jpg">
                             </figure>
@@ -184,7 +184,7 @@
                             <h2 class="news_1_contain_article_title">VESTI TAKES THE PODIUM IN BARCELONA</h2>
                             <p class="news_1_contain_article_sub">"I'm so happy". An immediate reaction from Vesti on top of Friday's qualifying....</p>
                             <div class="news_1_link">
-                                <a href="/news-1.html">
+                                <a href="./news-1.html">
                                     <p class="news_1_link_txt">
                                         Read more 
                                     </p>
@@ -199,7 +199,7 @@
                         </div>
                     </li>
                     <li class="news_1_contain"><!-- 第五組 -->
-                        <a href="/news-1.html">
+                        <a href="./news-1.html">
                             <figure class="news_1_contain_img_wrapper">
                                 <img src="./img/news/news_img05.jpg" alt="news_img05.jpg">
                             </figure>
@@ -224,7 +224,7 @@
                         </div>
                     </li>
                     <li class="news_1_contain"><!-- 第六組 -->
-                        <a href="/news-1.html">
+                        <a href="./news-1.html">
                             <figure class="news_1_contain_img_wrapper">
                                 <img src="./img/news/news_img06.jpg" alt="news/news_img06.jpg">
                             </figure>
@@ -249,7 +249,7 @@
                         </div>
                     </li>
                     <li class="news_1_contain"><!-- 第七組 -->
-                        <a href="/news-1.html">
+                        <a href="./news-1.html">
                             <figure class="news_1_contain_img_wrapper">
                                 <img src="./img/news/news_img07.jpg" alt="news_img07.jpg">
                             </figure>
@@ -259,7 +259,7 @@
                             <h2 class="news_1_contain_article_title">GREAT CAR - LOST OPPORTUNITY</h2>
                             <p class="news_1_contain_article_sub">This year's debut for Frederik Vesti in F2 at the French ART GP on the Bahrain...</p>
                             <div class="news_1_link">
-                                <a href="/news-1.html">
+                                <a href="./news-1.html">
                                     <p class="news_1_link_txt">
                                         Read more 
                                     </p>
@@ -274,7 +274,7 @@
                         </div>
                     </li>
                     <li class="news_1_contain"><!-- 第八組 -->
-                        <a href="/news-1.html">
+                        <a href="./news-1.html">
                             <figure class="news_1_contain_img_wrapper">
                                 <img src="./img/news/news_img08.jpg" alt="news_img08.jpg">
                             </figure>
@@ -299,7 +299,7 @@
                         </div>
                     </li>
                     <li class="news_1_contain"><!-- 第九組 -->
-                        <a href="/news-1.html">
+                        <a href="./news-1.html">
                             <figure class="news_1_contain_img_wrapper">
                                 <img src="./img/news/news_img09.jpg" alt="news_img09.jpg">
                             </figure>
@@ -397,7 +397,7 @@
                     <img src="./img/SVG/v-shape.svg" alt="v-shape.svg">
                 </figure>
                 <div class="home_footer_logo_wrapper">
-                    <a href="/index.html">
+                    <a href="./index.html">
                         <figure class="home_footer_logo_img_wrapper">
                                 <img class="home_footer_logo" src="./img/SVG/icon-footer_logo.svg" alt="icon-footer_logo.svg">
                         </figure>
@@ -408,22 +408,22 @@
                         <h2 class="home_footer_contain_title">menu</h2>
                         <ul class="home_footer_contain_list_wrapper">
                             <li class="home_footer_contain_list">
-                                <a href="/about.html">
+                                <a href="./about.html">
                                     About
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/calendar.html">
+                                <a href="./calendar.html">
                                     Calendar
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/media.html">
+                                <a href="./media.html">
                                     Media
                                 </a>
                             </li>
                             <li class="home_footer_contain_list">
-                                <a href="/news.html">
+                                <a href="./news.html">
                                     News
                                 </a>
                             </li>
