--- a/media.html
+++ b/media.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="media_1_grid_wrapper "><!-- 顯示區塊 -->
                     <div class="media_1_grid_big"><!-- 大 群組燈箱 a-1 開始-->
-                        <a class="media_1_grid_link" data-fancybox="a-1" href="./img/media/media_img01-1.jpg" style="background-image: url(./img/media/media_img01-1.jpg);">
+                        <a class="media_1_grid_link" data-fancybox="a-1" href="./img/media/media_img01-1.jpg" style="background-image: url('./img/media/media_img01-1.jpg');">
                             <div class="icon-gallery_wrapper"><!-- icon-gallery -->
                                 <p class="icon-gallery_txt">10</p><!-- 字體 -->
                                 <div class="icon-gallery"><!-- icon -->
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="media_1_grid_small"><!-- 小 群組燈箱 -->
-                        <a class="media_1_grid_link" data-fancybox="a-2" href="./img/media/media_img02-1.jpg" style="background-image: url(./img/media/media_img02-1.jpg);">
+                        <a class="media_1_grid_link" data-fancybox="a-2" href="./img/media/media_img02-1.jpg" style="background-image: url('./img/media/media_img02-1.jpg');">
                             <div class="icon-gallery_wrapper"><!-- icon-gallery -->
                                 <p class="icon-gallery_txt">10</p>
                                 <div class="icon-gallery">
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="media_1_grid_small"><!-- 小 群組燈箱 -->
-                        <a class="media_1_grid_link" data-fancybox="a-3" href="./img/media/media_img03-1.jpg" style="background-image: url(./img/media/media_img03-1.jpg);">
+                        <a class="media_1_grid_link" data-fancybox="a-3" href="./img/media/media_img03-1.jpg" style="background-image: url('./img/media/media_img03-1.jpg');">
                             <div class="icon-gallery_wrapper"><!-- icon-gallery -->
                                 <p class="icon-gallery_txt">10</p>
                                 <div class="icon-gallery">
